# cpptest

./: .gitignore  CMakeLists.txt
dialogs/: Person.json  ServerRack.json
include/: game_map.hpp  ldtk_load.hpp
map/: cpptest.ldtk  floor_1.ldtk
src/: ldtk_load.cpp  main.cpp
